<resources>
    <string name="app_name">LawRights</string>
    <string name="Home">Home</string>
    <string name="feeds">Feeds</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>


    <string name="search">Search</string>
    <string name="law_caption">DID YOU KNOW?</string>
    <string name="law_action_text">My Rights</string>
    <string name="law_description">"Digital Assault can put you into jail\n for 15 years?"</string>
    <string name="quick_links">Quick Links</string>
    <string name="close_dialog_icon">close dialog icon</string>
    <string name="search_for_everything_about_rights">Search for everything about Rights</string>
</resources>