<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="340dp"
        android:layout_height="210dp"
        android:id="@+id/root_layout"
        android:layout_gravity="center"
        tools:background="@drawable/law_card_image">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/caption"
            android:layout_marginBottom="10dp"
            tools:text="@string/law_caption"
            android:textColor="@color/law_text_green"
            android:textSize="7sp"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintStart_toStartOf="@+id/description" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/law_description"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/action_text"
            android:background="@drawable/my_rights_action_bg"
            android:fontFamily="@font/silka"
            android:gravity="center"
            android:text="@string/law_action_text"
            android:textSize="6sp"
            android:textColor="#7D4502"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>