<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_view"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="LawRights"
                android:textColor="#03A87D"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/silka"
                android:text="Ensuring citizen’s Rights with the rules of law"
                android:textColor="#1A284B"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notification"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/search_background"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="10sp"
                android:hint="@string/search"
                android:textColorHint="@color/hint_color"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:startIconContentDescription="@string/search" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/law_card_viewpger"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="66dp"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/indicator_bg_green"
                app:layout_constraintEnd_toEndOf="@+id/law_card_viewpger"
                app:layout_constraintStart_toStartOf="@+id/law_card_viewpger"
                app:layout_constraintTop_toBottomOf="@+id/law_card_viewpger">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#E6F6F2"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    app:tabPaddingEnd="5dp"
                    app:tabPaddingStart="5dp" />
            </FrameLayout>


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/silka"
                android:text="@string/quick_links"
                android:textColor="#1A284B"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textInputEditText"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_grid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textInputEditText"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:spanCount="2"
                tools:itemCount="6"
                tools:listitem="@layout/law_card_link_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <View
        android:visibility="gone"
        android:id="@+id/backdrop"
        android:background="#6414142B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:src="@drawable/ic_arrow_left"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:fabSize="mini"
        android:visibility="gone"
        app:maxImageSize="12dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/close_dialog_icon" />

    <FrameLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="?attr/bottomSheetStyle"
        android:background="@drawable/bottom_sheet_radius"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="HAHAHAHA!" />

   </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
